# forensic_analyz

./: .gitignore  GUI_flesh_Fast_IR_analyz.md  README.md  cmd_fast_analyzed.md  fastir_cmd.spec  fastir_gui.spec  pyproject.toml
fastir_analyzer/: __init__.py  cli.py  cmd_runner.py  gui_app.py  io.py  orchestrator.py  report.py  rules.py
